# splitdist

./: .gitignore  CMakeLists.txt  README.md  bitset_test  check-sdist.pl  cmake_install.cmake  label-map-visitor-test.cc  label_map_test  parser-test.cc  parser.cc  parser.hh  sdist.cc  set-builder-test.cc  set-matcher-test.cc
